chore: add mcp flag

--- a/apps/v4/content/docs/dark-mode/vite.mdx
+++ b/apps/v4/content/docs/dark-mode/vite.mdx
@@ -5,7 +5,7 @@ description: Adding dark mode to your vite app.
 
 ## Create a theme provider
 
-```tsx title="components/theme-provider.tsx"
+```tsx title="components/theme-provider.tsx" showLineNumbers
 import { createContext, useContext, useEffect, useState } from "react"
 
 type Theme = "dark" | "light" | "system"
@@ -85,7 +85,7 @@ export const useTheme = () => {
 
 Add the `ThemeProvider` to your root layout.
 
-```tsx {1,5-7} title="App.tsx"
+```tsx {1,5-7} title="App.tsx" showLineNumbers
 import { ThemeProvider } from "@/components/theme-provider"
 
 function App() {
@@ -103,7 +103,7 @@ export default App
 
 Place a mode toggle on your site to toggle between light and dark mode.
 
-```tsx title="components/mode-toggle.tsx"
+```tsx title="components/mode-toggle.tsx" showLineNumbers
 import { Moon, Sun } from "lucide-react"
 
 import { Button } from "@/components/ui/button"
@@ -122,8 +122,8 @@ export function ModeToggle() {
     <DropdownMenu>
       <DropdownMenuTrigger asChild>
         <Button variant="outline" size="icon">
-          <Sun className="h-[1.2rem] w-[1.2rem] scale-100 rotate-0 transition-all dark:scale-0 dark:-rotate-90" />
-          <Moon className="absolute h-[1.2rem] w-[1.2rem] scale-0 rotate-90 transition-all dark:scale-100 dark:rotate-0" />
+          <Sun className="h-[1.2rem] w-[1.2rem] rotate-0 scale-100 transition-all dark:-rotate-90 dark:scale-0" />
+          <Moon className="absolute h-[1.2rem] w-[1.2rem] rotate-90 scale-0 transition-all dark:rotate-0 dark:scale-100" />
           <span className="sr-only">Toggle theme</span>
         </Button>
       </DropdownMenuTrigger>
