docs: replace beta with latest

--- a/apps/v4/content/docs/(root)/mcp.mdx
+++ b/apps/v4/content/docs/(root)/mcp.mdx
@@ -32,7 +32,7 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
   <TabsContent value="claude" className="mt-4">
     **Run the following command** in your project:
        ```bash
-       npx shadcn@beta mcp init --client claude
+       npx shadcn@latest mcp init --client claude
        ```
 
     **Restart Claude Code** and try the following prompts:
@@ -47,7 +47,7 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
   <TabsContent value="cursor" className="mt-4">
     **Run the following command** in your project:
        ```bash
-       npx shadcn@beta mcp init --client cursor
+       npx shadcn@latest mcp init --client cursor
        ```
 
     Open **Cursor Settings** and **Enable the MCP server** for shadcn. Then try the following prompts:
@@ -60,7 +60,7 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
   <TabsContent value="vscode" className="mt-4">
     **Run the following command** in your project:
        ```bash
-       npx shadcn@beta mcp init --client vscode
+       npx shadcn@latest mcp init --client vscode
        ```
 
     Open `.vscode/mcp.json` and click **Start** next to the shadcn server. Then try the following prompts with GitHub Copilot:
