--- a/apps/v4/content/docs/registry/mcp.mdx
+++ b/apps/v4/content/docs/registry/mcp.mdx
@@ -41,7 +41,7 @@ Ask your registry consumers to configure your registry in their `components.json
     **Run the following command** in your project:
 
     ```bash
-    npx shadcn@beta mcp init --client claude
+    npx shadcn@latest mcp init --client claude
     ```
 
     **Restart Claude Code** and try the following prompts:
@@ -64,7 +64,7 @@ Ask your registry consumers to configure your registry in their `components.json
     ```
     **Run the following command** in your project:
        ```bash
-       npx shadcn@beta mcp init --client cursor
+       npx shadcn@latest mcp init --client cursor
        ```
 
     Open **Cursor Settings** and **Enable the MCP server** for shadcn. Then try the following prompts:
@@ -85,7 +85,7 @@ Ask your registry consumers to configure your registry in their `components.json
     ```
     **Run the following command** in your project:
        ```bash
-       npx shadcn@beta mcp init --client vscode
+       npx shadcn@latest mcp init --client vscode
        ```
 
     Open `.vscode/mcp.json` and click **Start** next to the shadcn server. Then try the following prompts with GitHub Copilot:
