docs: add changelog

--- a/apps/v4/content/docs/(root)/cli.mdx
+++ b/apps/v4/content/docs/(root)/cli.mdx
@@ -13,7 +13,7 @@ The `init` command installs dependencies, adds the `cn` util and configures CSS 
 npx shadcn@latest init
 ```
 
-### Options
+**Options**
 
 ```bash
 Usage: shadcn init [options] [components...]
@@ -34,8 +34,11 @@ Options:
   --no-src-dir                   do not use the src directory when creating a new project.
   --css-variables                use css variables for theming. (default: true)
   --no-css-variables             do not use css variables for theming.
+  --no-base-style                do not install the base shadcn style
   -h, --help                     display help for command
 ```
+
+---
 
 ## add
 
@@ -45,7 +48,7 @@ Use the `add` command to add components and dependencies to your project.
 npx shadcn@latest add [component]
 ```
 
-### Options
+**Options**
 
 ```bash
 Usage: shadcn add [options] [components...]
@@ -69,6 +72,126 @@ Options:
   -h, --help          display help for command
 ```
 
+---
+
+## view
+
+Use the `view` command to view items from the registry before installing them.
+
+```bash
+npx shadcn@latest view [item]
+```
+
+You can view multiple items at once:
+
+```bash
+npx shadcn@latest view button card dialog
+```
+
+Or view items from namespaced registries:
+
+```bash
+npx shadcn@latest view @acme/auth @v0/dashboard
+```
+
+**Options**
+
+```bash
+Usage: shadcn view [options] <items...>
+
+view items from the registry
+
+Arguments:
+  items            the item names or URLs to view
+
+Options:
+  -c, --cwd <cwd>  the working directory. defaults to the current directory.
+  -h, --help       display help for command
+```
+
+---
+
+## search
+
+Use the `search` command to search for items from registries.
+
+```bash
+npx shadcn@latest search [registry]
+```
+
+You can search with a query:
+
+```bash
+npx shadcn@latest search @shadcn -q "button"
+```
+
+Or search multiple registries at once:
+
+```bash
+npx shadcn@latest search @shadcn @v0 @acme
+```
+
+The `list` command is an alias for `search`:
+
+```bash
+npx shadcn@latest list @acme
+```
+
+**Options**
+
+```bash
+Usage: shadcn search|list [options] <registries...>
+
+search items from registries
+
+Arguments:
+  registries             the registry names or urls to search items from. Names
+                         must be prefixed with @.
+
+Options:
+  -c, --cwd <cwd>        the working directory. defaults to the current directory.
+  -q, --query <query>    query string
+  -l, --limit <number>   maximum number of items to display per registry (default: "100")
+  -o, --offset <number>  number of items to skip (default: "0")
+  -h, --help             display help for command
+```
+
+---
+
+## list
+
+Use the `list` command to list all items from a registry.
+
+```bash
+npx shadcn@latest list @acme
+```
+
+**Options**
+
+```bash
+Usage: shadcn list [options] <registries...>
+
+list items from registries
+
+Arguments:
+  registries             the registry names or urls to list items from. Names
+    must be prefixed with @.
+```
+
+**Options**
+
+```bash
+Usage: shadcn list [options] <registries...>
+
+list items from registries
+
+Arguments:
+  registries             the registry names or urls to list items from. Names
+    must be prefixed with @.
+```
+
+---
+
 ## build
 
 Use the `build` command to generate the registry JSON files.
@@ -79,7 +202,7 @@ npx shadcn@latest build
 
 This command reads the `registry.json` file and generates the registry JSON files in the `public/r` directory.
 
-### Options
+**Options**
 
 ```bash
 Usage: shadcn build [options] [registry]
