--- a/apps/v4/content/docs/(root)/changelog.mdx
+++ b/apps/v4/content/docs/(root)/changelog.mdx
@@ -291,7 +291,7 @@ We're working on zero-config MCP support for shadcn/ui registry. One command `np
   className="mt-6 w-full overflow-hidden rounded-lg border"
 />
 
-Learn more in the thread here: https://x.com/shadcn/status/1917597228513853603
+Learn more in the [thread here](https://x.com/shadcn/status/1917597228513853603).
 
 ## March 2025 - shadcn 2.5.0
 
