fix: sidebar persisted state
Invert cookie check to ensure sidebar opens by default when no cookie is
set on first load.

--- a/apps/www/content/docs/components/sidebar.mdx
+++ b/apps/www/content/docs/components/sidebar.mdx
@@ -420,7 +420,7 @@ import { AppSidebar } from "@/components/app-sidebar"
 
 export async function Layout({ children }: { children: React.ReactNode }) {
   const cookieStore = await cookies()
-  const defaultOpen = cookieStore.get("sidebar_state")?.value === "true"
+  const defaultOpen = cookieStore.get("sidebar_state")?.value !== "false"
 
   return (
     <SidebarProvider defaultOpen={defaultOpen}>
