--- a/apps/www/content/docs/registry/getting-started.mdx
+++ b/apps/www/content/docs/registry/getting-started.mdx
@@ -189,8 +189,8 @@ Here are some guidelines to follow when building components for a registry.
 - The following properties are required for the block definition: `name`, `description`, `type` and `files`.
 - Make sure to list all registry dependencies in `registryDependencies`. A registry dependency is the name of the component in the registry eg. `input`, `button`, `card`, etc or a URL to a registry item eg. `http://localhost:3000/r/editor.json`.
 - Make sure to list all dependencies in `dependencies`. A dependency is the name of the package in the registry eg. `zod`, `sonner`, etc. To set a version, you can use the `name@version` format eg. `zod@^3.20.0`.
-- Use the `@/registry` path for imports. e.g. `import { HelloWorld } from "@/registry/new-york/hello-world/hello-world"`. The `style` segment is optional—`@/registry/hello-world/...` also works and will be rewritten based on your configured style.
-- The CLI also rewrites alias-like string literals (for example, `"@/registry/new-york/lib/fields/color"` or `"@/lib/fields/color"`).
+- Use the `@/registry` path for imports. e.g. `import { Button } from "@/registry/new-york/ui/button"`. The `style` segment is optional—`@/registry/ui/button` also works and will be rewritten based on your configured style.
+- The CLI also rewrites alias-like string literals (for example, `"@/registry/new-york/payload/fields/color"` or `"@/payload/fields/color"`).
 - Buckets without a matching alias fall back to your `components` alias (e.g., `@/registry/new-york/payload/x` → `@/components/payload/x`). Add custom alias keys in `components.json` to route these to specific locations (e.g., `"payload": "@/payload"`).
 - This helps third‑party registries ship more than just `ui/lib/hooks/components`, and lets you control where each library’s files are installed. Some libraries require aliases—check their docs.
 - Ideally, place files within `components`, `hooks`, `lib` inside each registry item.
