docs: change className to class in Astro example

--- a/apps/v4/content/docs/installation/astro.mdx
+++ b/apps/v4/content/docs/installation/astro.mdx
@@ -65,7 +65,7 @@ import { Button } from "@/components/ui/button"
 	</head>
 
 	<body>
-		<div className="grid place-items-center h-screen content-center">
+		<div class="grid place-items-center h-screen content-center">
 			<Button>Button</Button>
 		</div>
 	</body>
