docs: fix bad link to registry index

--- a/apps/v4/content/docs/registry/namespace.mdx
+++ b/apps/v4/content/docs/registry/namespace.mdx
@@ -41,7 +41,7 @@ Registry namespaces are prefixed with `@` and provide a way to organize and refe
 
 ## Decentralized Namespace System
 
-We intentionally designed the namespace system to be decentralized. There is [central registrar](/docs/registry/registrar) for open source namespaces but you are free to create and use any namespace you want.
+We intentionally designed the namespace system to be decentralized. There is a [central open source registry index](/docs/registry/registry-index) for open source namespaces but you are free to create and use any namespace you want.
 
 This decentralized approach gives you complete flexibility to organize your resources however makes sense for your organization.
 
