feat: remove flex class

--- a/apps/v4/content/docs/components/input.mdx
+++ b/apps/v4/content/docs/components/input.mdx
@@ -97,3 +97,9 @@ import { Input } from "@/components/ui/input"
 ### Form
 
 <ComponentPreview name="input-form" />
+
+## Changelog
+
+### 2025-09-18 Remove `flex` class
+
+Edit `input.tsx` and remove the `flex` class from the input component. This is no longer needed.
