--- a/apps/v4/content/docs/dark-mode/index.mdx
+++ b/apps/v4/content/docs/dark-mode/index.mdx
@@ -9,7 +9,7 @@ description: Adding dark mode to your site.
       role="img"
       viewBox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
-      className="h-10 w-10"
+      className="size-10"
       fill="currentColor"
     >
       <title>Next.js</title>
@@ -22,7 +22,7 @@ description: Adding dark mode to your site.
       role="img"
       viewBox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
-      className="h-10 w-10"
+      className="size-10"
       fill="currentColor"
     >
       <title>Vite</title>
@@ -35,7 +35,7 @@ description: Adding dark mode to your site.
       role="img"
       viewBox="0 0 64 79"
       xmlns="http://www.w3.org/2000/svg"
-      className="h-10 w-10"
+      className="size-10"
       fill="currentColor"
     >
       <path d="M19.9924 65.9282C16.1165 62.432 14.9851 55.0859 16.5999 49.7638C19.3998 53.1193 23.2793 54.1822 27.2977 54.7822C33.5013 55.7081 39.5937 55.3618 45.3565 52.5637C46.0158 52.2434 46.625 51.8174 47.3454 51.386C47.8861 52.9341 48.0268 54.497 47.838 56.0877C47.3787 59.9617 45.4251 62.9542 42.3177 65.2227C41.0752 66.13 39.7604 66.9411 38.4771 67.7967C34.5346 70.4262 33.4679 73.5095 34.9494 77.9946C34.9846 78.1038 35.0161 78.2131 35.0957 78.4797C33.0828 77.5909 31.6124 76.2965 30.4921 74.5946C29.3088 72.7984 28.7458 70.8114 28.7162 68.6615C28.7014 67.6152 28.7014 66.5597 28.5588 65.5282C28.2107 63.0135 27.0144 61.8876 24.7608 61.8227C22.4479 61.7561 20.6183 63.1672 20.1331 65.3893C20.0961 65.5597 20.0424 65.7282 19.9887 65.9263L19.9924 65.9282Z" />
@@ -48,7 +48,7 @@ description: Adding dark mode to your site.
       role="img"
       viewBox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
-      className="h-10 w-10"
+      className="size-10"
       fill="currentColor"
     >
       <title>Remix</title>
