--- a/apps/v4/content/docs/components/spinner.mdx
+++ b/apps/v4/content/docs/components/spinner.mdx
@@ -51,6 +51,22 @@ import { Spinner } from "@/components/ui/spinner"
 
 ---
 
+## API Reference
+
+### Spinner
+
+Use the `Spinner` component to display a spinner.
+
+| Prop        | Type     | Default |
+| ----------- | -------- | ------- |
+| `className` | `string` | ``      |
+
+```tsx
+<Spinner />
+```
+
+---
+
 ## Customization
 
 You can replace the default spinner icon with any other icon by editing the `Spinner` component.
@@ -178,9 +194,9 @@ export function SpinnerEmpty() {
   return (
     <Empty>
       <EmptyHeader>
-        <EmptyIcon>
+        <EmptyMedia variant="icon">
           <Spinner />
-        </EmptyIcon>
+        </EmptyMedia>
         <EmptyTitle>Loading...</EmptyTitle>
         <EmptyDescription>Please wait while we load the data.</EmptyDescription>
       </EmptyHeader>
