docs: clarify CLI usage to prevent registry JSON errors

--- a/apps/v4/content/docs/installation/index.mdx
+++ b/apps/v4/content/docs/installation/index.mdx
@@ -7,6 +7,16 @@ description: How to install dependencies and structure your app.
 
 Start by selecting your framework of choice. Then follow the instructions to install the dependencies and structure your app. shadcn/ui is built to work with all React frameworks.
 
+## CLI
+
+Components are added using the shadcn CLI. Make sure you're using the correct command:
+
+```bash
+npx shadcn@latest add [component-name]
+```
+
+**Note:** The old `shadcn-cli` package is deprecated. Use `shadcn` instead.
+
 <div className="mt-8 grid gap-4 sm:grid-cols-2 sm:gap-6">
   <LinkedCard href="/docs/installation/next">
     <svg
