--- a/apps/v4/content/docs/components/spinner.mdx
+++ b/apps/v4/content/docs/components/spinner.mdx
@@ -1,6 +1,7 @@
 ---
 title: Spinner
 description: An indicator that can be used to show a loading state.
+component: true
 ---
 
 <ComponentPreview name="spinner-demo" />
