--- a/apps/v4/content/docs/components/item.mdx
+++ b/apps/v4/content/docs/components/item.mdx
@@ -4,6 +4,10 @@ description: A versatile component that you can use to display any content.
 component: true
 ---
 
+The `Item` component is a straightforward flex container that can house nearly any type of content.
+
+You can pretty much achieve the same result with the `div` element and some classes, but **I've built this so many times** that I decided to create a component for it. Now I use it all the time.
+
 <ComponentPreview name="item-demo" className="[&_.preview]:p-4" />
 
 ## Installation
