fix(docs): calendar hijri doc fixed to show correct months in dropdown layout

--- a/apps/v4/content/docs/components/calendar.mdx
+++ b/apps/v4/content/docs/components/calendar.mdx
@@ -97,6 +97,9 @@ You can use the `<Calendar>` component to build a date picker. See the [Date Pic
 
 To use the Persian calendar, edit `components/ui/calendar.tsx` and replace `react-day-picker` with `react-day-picker/persian`.
 
+Then, to ensure the months dropdown displays correctly when `captionLayout='dropdown'`, pass a custom `formatMonthDropdown`
+function to your Calendar instance.
+
 ```diff
 - import { DayPicker } from "react-day-picker"
 + import { DayPicker } from "react-day-picker/persian"
