--- a/apps/v4/content/docs/components/item.mdx
+++ b/apps/v4/content/docs/components/item.mdx
@@ -4,7 +4,7 @@ description: A versatile component that you can use to display any content.
 component: true
 ---
 
-The `Item` component is a straightforward flex container that can house nearly any type of content.
+The `Item` component is a straightforward flex container that can house nearly any type of content. Use it to display a title, description, and actions. Group it with the `ItemGroup` component to create a list of items.
 
 You can pretty much achieve the same result with the `div` element and some classes, but **I've built this so many times** that I decided to create a component for it. Now I use it all the time.
 
@@ -21,7 +21,7 @@ You can pretty much achieve the same result with the `div` element and some clas
 <TabsContent value="cli">
 
 ```bash
-npx shadcn@latest add button-group
+npx shadcn@latest add item
 ```
 
 </TabsContent>
